# qteasy

./: .gitignore  HistoryPanel_interactive_demo.ipynb  README.md  README_EN.md  Untitled.ipynb  meta.yaml  pyproject.toml  setup.cfg
docs/: I18N.md  I18N_GLOSSARY.md  Makefile  requirements.txt
docs/_joinquant_migration_source/: Example_01_双均线择时策略.ipynb  Example_02_Alpha选股策略.ipynb  Example_03_集合竞价选股.ipynb  Example_04_多因子选股.ipynb  Example_05_类网格交易.ipynb  Example_06_指数增强选股.ipynb  Example_07_跨品种套利.ipynb  Example_08_跨期套利.ipynb  Example_09_日内回转交易.ipynb  Example_10_做市商交易.ipynb  Example_11_海龟交易法.ipynb  Example_12_行业轮动选股.ipynb  Example_13_经典网格交易.ipynb  Example_14_机器学习选股.ipynb  Example_15_大小盘轮动投资策略.ipynb
docs/scripts/: apply_bcd_translations.py  apply_de_pivot.py  apply_de_residual.py  apply_es_gaps.py  apply_es_residual.py  apply_fr_gaps.py  apply_fr_residual.py  apply_ja_gaps.py  apply_manage_data_e.py  apply_phase1_tail.py  build_bcd_translations.py  build_manage_data_en_translations.py  de_translate_from_en.py  es_postprocess.sh  (+19 more)
examples/: live_example.py  live_grid.py  live_grid_multi.py  live_rolling.py  strategy_example_01.py  strategy_example_02.py  strategy_example_03.py  strategy_example_04.py  strategy_example_05.py  strategy_example_06.py  strategy_example_07.py  strategy_example_08.py  strategy_example_09.py  strategy_example_10.py  strategy_example_11.py  strategy_example_12.py  strategy_example_13.py  strategy_example_14.py  strategy_example_15.py
qteasy/: __init__.py  _arg_validators.py  broker.py  core.py  data_channels.py  database.py  datatables.py  em_public_http.py  emfuncs.py  live_config.py  qt_operator.py  sinafuncs.py  strategy.py  trade_recording.py  trader.py  trader_cli.py  trader_tui.py  trading_util.py  tsfuncs.py
tests/: notebook_trader_headless_script.py  test_broker.py  test_broker_contract.py  test_broker_order_id_persistence_20260429.py  test_channels.py  test_datasource.py  test_eastmoney.py  test_example_strategies.py  test_fd_trade_rules.py  test_live_config.py  test_log.py  test_notebook_headless_integration.py  test_operator_and_strategy.py  test_qt.py  test_qt_operator_live_trade.py  test_qt_run.py  test_strategy.py  test_trade_io_contracts.py  test_trader.py  test_trader_artifacts.py  test_trader_cli.py  test_trader_integration.py  test_trader_risk_integration.py  test_trader_tui.py  test_trader_unit.py  test_trading.py  trader_test_helpers.py
(+859 files in other folders)
